--- a/templates/post_by_category.html
+++ b/templates/post_by_category.html
@@ -1,26 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-      {% load static %} {% for post in featured_post %} {% if forloop.first %}
-      <div
-        class="jumbotron p-3 p-md-5 text-white rounded bg-dark"
-        style="
-          background-image: url({{post.featured_image.url}});
-          background-blend-mode: overlay;
-          background-size: cover;
-        "
-      >
-        <div class="col-md-8 px-0">
-          <h1 class="display-4 font-italic">{{ post.title }}</h1>
-          <p class="lead my-3">{{ post.short_description| truncatewords:20}}</p>
-          <p class="lead mb-0">
-            <a href="#" class="text-white font-weight-bold"
-              >Continue reading...</a
-            >
-          </p>
-        </div>
-      </div>
-      {% endif %} {% endfor %} {% comment %} Featured Post {% endcomment %}
+      {% load static %} 
+       {% comment %} Featured Post {% endcomment %}
       <h3 class="text-uppercase text-warning" style="letter-spacing: 2px">
         Category - {{ category}}
       </h3>
@@ -30,7 +12,7 @@
         <div class="col-md-6">
           <div class="card border-0">
             <div class="card-body">
-              <h3>{{post.title}}</h3>
+              <h3><a href="{% url 'blogs' post.slug %}" class="text-dark">{{post.title}}</a></h3>
               <small class="mb-1 text-muted"
                 >{{post.created_at | timesince}} ago | {{post.author}}
               </small>
