--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,16 @@
             </form>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-sm btn-warning" href="#">Login</a> &nbsp;
-            <a class="btn btn-sm btn-outline-secondary" href="#">Register</a>
+            {% if not user.is_authenticated %}
+            
+            <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a> &nbsp;
+            <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
+            
+            {% else %}
+            <span>You are logged in as {{ user }}</span>
+            &emsp;
+            <a class="btn btn-sm btn-warning" href="{% url 'logout' %}">Logout</a> &nbsp;
+            {% endif %}
           </div>
         </div>
       </header>
