--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -10,6 +10,10 @@
       class="nav-link text-dark {% if '/categories/' in request.path %}bg-warning{% endif %}"
       >Categories</a
     >
-    <a href="" class="nav-link text-dark">Posts</a>
+    <a
+      href="{% url 'posts' %}"
+      class="nav-link text-dark {% if '/posts/' in request.path %}bg-warning{% endif %}"
+      >Posts</a
+    >
   </div>
 </div>
